--- a/Seat/index300x250.html
+++ b/Seat/index300x250.html
@@ -159,9 +159,9 @@
 
     #logo {
         position: absolute;
-        height: 40px;
-        margin-top: -45px !important;
-        margin-left: 225px;
+        height: 50px;
+        margin-top: -264px !important;
+        margin-left: 205px;
     }
 
 </style>
@@ -176,7 +176,7 @@
         <!-----------RECURSO EXTERNO---------->
 
         <!-- LOGO -->
-        <div class="logo"> <img id="logo" src="https://i.imgur.com/AyZE5jE.png"></div>
+        <div class="logo"> <img id="logo" src="https://i.imgur.com/cI3FUPr.png"></div>
 
         <div id="botones-b">
             <center>
