--- a/Seat/index300x250.html
+++ b/Seat/index300x250.html
@@ -159,9 +159,9 @@
 
     #logo {
         position: absolute;
-        height: 50px;
-        margin-top: -264px !important;
-        margin-left: 205px;
+        margin-top: -245px !important;
+        height: 20px;
+        margin-left: 220px;
     }
 
 </style>
@@ -176,7 +176,7 @@
         <!-----------RECURSO EXTERNO---------->
 
         <!-- LOGO -->
-        <div class="logo"> <img id="logo" src="https://i.imgur.com/cI3FUPr.png"></div>
+        <div class="logo"> <img id="logo" src="https://i.imgur.com/cgiyoHl.png"></div>
 
         <div id="botones-b">
             <center>
@@ -219,11 +219,12 @@
         var boton2 = false;
         var clickVideo = true;
         var autoplay = 0;
+        var clo = 0;
         //--------------------------------------------------------------
-        var total = Math.trunc(video.duration); // DURACION DEL VIDEO
-        var porcent25 = Math.trunc(total * 0.25);
-        var porcent50 = Math.trunc(total * 0.50);
-        var porcent75 = Math.trunc(total * 0.75);
+        //var total = Math.trunc(video.duration); // DURACION DEL VIDEO
+        //var porcent25 = Math.trunc(total * 0.25);
+        //var porcent50 = Math.trunc(total * 0.50);
+        //var porcent75 = Math.trunc(total * 0.75);
 
 
         video.onclick = function() { // VIDEO PLAY Y VIDEO PAUSE
@@ -268,26 +269,28 @@
                     document.getElementById("btn-img3").classList.add('display-on-2');
                 }, 1500);
             }
-
-            if (video.currentTime == 0) {
+            
+            var total = Math.trunc(video.duration);
+            var porcent = Math.trunc(video.currentTime);
+            var porcent25 = Math.trunc(total * 0.25);
+            var porcent50 = Math.trunc(total * 0.50);
+            var porcent75 = Math.trunc(total * 0.75);
+            
+            if (porcent == 0) {
                 dhtml.sendEvent(1, 'video_0%');
-                console.log('0')
             }
-            if (video.currentTime == porcent25) {
+            if (porcent == porcent25) {
                 dhtml.sendEvent(2, 'video_25%');
-                console.log('25')
             } // EJECUCION DE EVENTO CUANDO LLEGUE A 25%
-            if (video.currentTime == porcent50) {
+            if (porcent == porcent50) {
                 dhtml.sendEvent(3, 'video_50%');
-                console.log('50')
             }
-            if (video.currentTime == porcent75) {
+            if (porcent == porcent75) {
                 dhtml.sendEvent(4, 'video_75%');
-                console.log('75')
             }
-            if (video.currentTime == total) {
+            if (porcent == total && clo == 0) {
                 dhtml.sendEvent(5, 'video_100%');
-                console.log('100')
+                clo = 1;
             }
         }
 
@@ -295,19 +298,19 @@
             if (numero == 1) {
                 document.getElementById("bn1").classList.remove('display-off');
                 document.getElementById("close").classList.remove('display-off');
-                dhtml.sendEvent(6, 'ClickVentana1');
+                dhtml.sendEvent(6, 'Click1');
                 video.pause()
             }
             if (numero == 2) {
                 document.getElementById("bn2").classList.remove('display-off');
                 document.getElementById("close").classList.remove('display-off');
-                dhtml.sendEvent(7, 'ClickVentana2');
+                dhtml.sendEvent(7, 'Click2');
                 video.pause()
             }
             if (numero == 3) {
                 document.getElementById("bn3").classList.remove('display-off');
                 document.getElementById("close").classList.remove('display-off');
-                dhtml.sendEvent(8, 'ClickVentana3');
+                dhtml.sendEvent(8, 'Click3');
                 video.pause()
             }
         }
@@ -330,29 +333,22 @@
             console.log('bfseifb');
         }
 
-        var banner = document.getElementById('bn3');
-        clickTAGvalue = dhtml.getVar('clickTAG', 'https://www.seat.mx/autos/tarraco/descubre.html');
-        landingpagetarget = dhtml.getVar('landingPageTarget', '_blank');
-        banner.onclick = function() {
-            dhtml.sendEvent(11, 'redirTarraco');
-            window.open(clickTAGvalue, landingpagetarget); //when banner is clicked it will open new window directing to clickTAG value
-        }
 
         function adfOpenGlobalClickTAG(num) {
             if (num == 1) {
-                dhtml.sendEvent(9, 'redirArona');
+                dhtml.sendEvent(9, 'ClickVent1');
                 clickTAGvalue = dhtml.getVar('clickTAG', 'https://www.seat.mx/autos/arona/descubre.html'); //banner will receive clickTAG value - if not defined, banner will land to example.com
                 landingpagetarget = dhtml.getVar('landingPageTarget', '_blank');
                 window.open(clickTAGvalue, landingpagetarget);
             }
             if (num == 2) {
-                dhtml.sendEvent(10, 'redirAteca');
+                dhtml.sendEvent(10, 'ClickVent2');
                 clickTAGvalue = dhtml.getVar('clickTAG1', 'https://www.seat.mx/autos/ateca/descubre.html'); //banner will receive clickTAG value - if not defined, banner will land to example.com
                 landingpagetarget = dhtml.getVar('landingPageTarget', '_blank');
                 window.open(clickTAGvalue, landingpagetarget);
             }
             if (num == 3) {
-                dhtml.sendEvent(11, 'redirTarraco');
+                dhtml.sendEvent(11, 'ClickVent3');
                 clickTAGvalue = dhtml.getVar('clickTAG2', 'https://www.seat.mx/autos/tarraco/descubre.html'); //banner will receive clickTAG value - if not defined, banner will land to example.com
                 landingpagetarget = dhtml.getVar('landingPageTarget', '_blank');
                 window.open(clickTAGvalue, landingpagetarget);
