--- a/PNC video/index300x600.html
+++ b/PNC video/index300x600.html
@@ -119,12 +119,12 @@
     }
 
     #overlay #bn2 {
-        background-image: url(https://i.imgur.com/pNbq78B.png)
+        background-image: url(https://i.imgur.com/IQZqjyV.png)
             /*-----------RECURSO EXTERNO----------*/
     }
 
     #overlay #bn3 {
-        background-image: url(https://i.imgur.com/B9ehS7z.png)
+        background-image: url(https://i.imgur.com/RXi7DIX.png)
             /*-----------RECURSO EXTERNO----------*/
     }
 
