--- a/PNC video/index300x600.html
+++ b/PNC video/index300x600.html
@@ -351,7 +351,7 @@
                 }
                 if (num == 2) {
                     dhtml.sendEvent(10, 'redirAteca');
-                    clickTAGvalue = dhtml.getVar('clickTAG1', 'clickTAG1', 'https://www.pnc.com/insights/personal-finance/save/an-easy-way-to-help-protect-your-family-create-a-rainy-day-fund.html'); //banner will receive clickTAG value - if not defined, banner will land to example.com
+                    clickTAGvalue = dhtml.getVar('clickTAG1', 'https://www.pnc.com/insights/personal-finance/save/an-easy-way-to-help-protect-your-family-create-a-rainy-day-fund.html'); //banner will receive clickTAG value - if not defined, banner will land to example.com
                     landingpagetarget = dhtml.getVar('landingPageTarget', '_blank');
                     window.open(clickTAGvalue, landingpagetarget);
                 }
