--- a/SMARTFIT/formulario-CON portada.html
+++ b/SMARTFIT/formulario-CON portada.html
@@ -636,7 +636,7 @@
                             <option value="" disabled selected></option>
                             <option>Hombre</option>
                             <option>Mujer</option>
-                            <option selected>Género</option>
+                            <option selected>GÉNERO</option>
                         </select>
                     </p>
 
