--- a/SMARTFIT/formulario-def.html
+++ b/SMARTFIT/formulario-def.html
@@ -654,7 +654,7 @@
                             <option value="" disabled selected></option>
                             <option>Hombre</option>
                             <option>Mujer</option>
-                            <option selected>Género</option>
+                            <option selected>GÉNERO</option>
                         </select>
                     </p>
 
