--- a/Easy Sept/Venetian.html
+++ b/Easy Sept/Venetian.html
@@ -2170,7 +2170,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i52.image.css:image/base/css*/
 #i52 { opacity: 1; }
 /*#/#*//*#i52.i53.positioning.css:positioning/base/css.2*/
-#i52 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 120px;
+#i52 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 120px;
         -ms-transform: translate(0, 0) translate(0px, 361px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 361px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 361px) rotate(0deg);
@@ -2198,10 +2198,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i62 { opacity: 1; }
 /*#/#*//*#i62.i63.positioning.css:positioning/base/css.2*/
 #i62 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 61px; height: 61px;
-        -ms-transform: translate(0, 0) translate(51px, 402px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(51px, 402px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(51px, 402px) rotate(0deg);
-        transform: translate(0, 0) translate(51px, 402px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(62px, 402px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(62px, 402px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(62px, 402px) rotate(0deg);
+        transform: translate(0, 0) translate(62px, 402px) rotate(0deg);
 }
 /*#/#*//*#i64.image.css:image/base/css*/
 #i64 { opacity: 1; }
@@ -2303,7 +2303,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i54.text.html:text/html-->
 <div id="i54">Te esperamos para asesorarte.</div>
 <!--#/#--><!--#i52.image.html:image/html-->
-<img id="i52" src="https://i.imgur.com/iUdEjmd.png"/>
+<img id="i52" src="https://i.imgur.com/dmVmR54.png"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/3aX4YHt.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
@@ -2453,7 +2453,7 @@ customName: 1;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i46.image.meta:image/meta*/
-name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: CTA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
