--- a/CHEDRAUI/Venetian.html
+++ b/CHEDRAUI/Venetian.html
@@ -2244,16 +2244,16 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(82px, 345px) rotate(0deg);
 }
 /*#/#*//*#i68.text.css:text/base/css*/
-#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
 #i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 267px; height: 73px;
-        -ms-transform: translate(0, 0) translate(28px, 287px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(28px, 287px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(28px, 287px) rotate(0deg);
-        transform: translate(0, 0) translate(28px, 287px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(28px, 308px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(28px, 308px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(28px, 308px) rotate(0deg);
+        transform: translate(0, 0) translate(28px, 308px) rotate(0deg);
 }
 /*#/#*//*#i63.text.css:text/base/css*/
-#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 20px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
 #i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 265px; height: 47px;
         -ms-transform: translate(0, 0) translate(27px, 261px) rotate(0deg);
@@ -2344,7 +2344,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/dvgrads.png"/>
 <!--#/#--><!--#i68.text.html:text/html-->
-<div id="i68">Dale sabor a tu semana, no te pierdas las diferentes promociones de cada jueves y muchas más, porque celebrar a nuestro México cuesta menos.</div>
+<div id="i68">Ven y conoce la nueva sucursal en ciudad Sahagún, Hidalgo.</div>
 <!--#/#--><!--#i63.text.html:text/html-->
 <div id="i63">¡EN CHEDRAUI CUESTA MENOS!</div>
 <!--#/#--><!--#i91.image.html:image/html-->
@@ -2566,7 +2566,7 @@ customName: 1;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i68.text.meta:text/meta*/
-name: Dale sabor a tu semana, no te pierdas las diferentes promociones de cada jueves y muchas más, porque celebrar a nuestro México cuesta menos.; customName: false;
+name: Ven y conoce la nueva sucursal en ciudad Sahagún, Hidalgo.; customName: false;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i63.text.meta:text/meta*/
